--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +8,30 @@
   </head>
   <body>
     <div id="root"></div>
+    <div class="iframe_placeholder" data-iframe="">
+      <!-- <button class="button load_iframe_btn">
+        <svg
+          stroke-linecap="round"
+          width="24"
+          height="24"
+          version="1.1"
+          fill="none"
+          aria-hidden=""
+          class="svgicon icon_play"
+          role="img"
+          stroke="currentColor"
+          viewBox="0 0 24 24"
+          stroke-linejoin="round"
+          stroke-width="2"
+        >
+          <circle cx="12" cy="12" r="10"></circle>
+          <polygon points="10 8 16 12 10 16 10 8"></polygon>
+        </svg>
+        Run game
+      </button> -->
+
+      
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
